[package]
name = "weather-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.15"
reqwest = { version = "0.11.12", features = ["json"]}
serde   = "1.0.114"
serde_json = "1.0.56"
serde_derive = "1.0.114"
tokio = { version = "1.21.2", features = ["full"] }
